--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   audioplayers: ^3.0.1
+  http: ^0.13.6
+  flutter_tts: ^3.8.5
 
 dev_dependencies:
   flutter_test:
